--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "version": "0.0.1",
   "author": "Andrew Mason",
   "dependencies": {
+    "autoprefixer": "^9.4.6",
     "gatsby": "^2.0.66",
     "gatsby-image": "^2.0.23",
     "gatsby-plugin-netlify": "^2.0.6",
     "gatsby-plugin-netlify-cms": "^3.0.9",
+    "gatsby-plugin-postcss": "^2.0.2",
     "gatsby-plugin-purgecss": "^3.1.0",
     "gatsby-plugin-react-helmet": "^3.0.4",
     "gatsby-plugin-sass": "^2.0.7",
