--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gatsby-plugin-react-helmet": "^3.0.4",
     "gatsby-plugin-sass": "^2.0.7",
     "gatsby-plugin-sharp": "^2.0.15",
+    "gatsby-plugin-tailwindcss": "^1.0.3",
     "gatsby-remark-copy-linked-files": "^2.0.7",
     "gatsby-remark-images": "^3.0.1",
     "gatsby-remark-relative-images": "^0.2.1",
@@ -29,7 +30,9 @@
     "react": "^16.2.0",
     "react-dom": "^16.4.1",
     "react-helmet": "^5.2.0",
-    "uuid": "^3.2.1"
+    "uuid": "^3.2.1",
+    "babel-plugin-tailwind-components": "^0.5.10",
+    "tailwindcss": "^0.7.4"
   },
   "keywords": [
     "gatsby"
@@ -47,7 +50,6 @@
   },
   "devDependencies": {
     "prettier": "^1.15.3",
-    "rimraf": "^2.6.2",
-    "tailwindcss": "^0.7.4"
+    "rimraf": "^2.6.2"
   }
 }
