--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "version": "0.0.1",
   "author": "Andrew Mason",
   "dependencies": {
-    "autoprefixer": "^9.4.6",
+    "babel-plugin-tailwind-components": "^0.5.10",
     "gatsby": "^2.0.66",
     "gatsby-image": "^2.0.23",
+    "gatsby-plugin-manifest": "^2.0.13",
     "gatsby-plugin-netlify": "^2.0.6",
     "gatsby-plugin-netlify-cms": "^3.0.9",
     "gatsby-plugin-postcss": "^2.0.2",
@@ -28,12 +29,14 @@
     "react": "^16.2.0",
     "react-dom": "^16.4.1",
     "react-helmet": "^5.2.0",
-    "uuid": "^3.2.1",
-    "babel-plugin-tailwind-components": "^0.5.10",
-    "tailwindcss": "^0.7.4"
+    "tailwindcss": "^0.7.4",
+    "uuid": "^3.2.1"
   },
   "keywords": [
-    "gatsby"
+    "gatsby",
+    "tailwind",
+    "tailwindcss",
+    "purgecss"
   ],
   "license": "MIT",
   "main": "n/a",
